# Rmixmod

./: DESCRIPTION  LICENSE  MD5  NAMESPACE  NEWS  README  cleanup  configure  configure.ac
R/: A_NAMESPACE.R  Algo.R  CompositeModel.R  CompositeParameter.R  GaussianModel.R  GaussianParameter.R  Mixmod.R  MixmodCluster.R  MixmodClustering.R  MixmodDAResults.R  MixmodLearn.R  MixmodPredict.R  MixmodResults.R  MixmodXml.R  Model.R  MultinomialModel.R  MultinomialParameter.R  Parameter.R  Rmixmod.R  Strategy.R  global.R  zzz.R
data/: birds.rda  car.rda  finance.rda  geyser.rda  heterodata.rda  heterodatatest.rda  heterodatatrain.rda  titanic.rda
inst/: CITATION
man/: Algo-class.Rd  CompositeModel-class.Rd  CompositeParameter-class.Rd  GaussianModel-class.Rd  GaussianParameter-class.Rd  Mixmod-class.Rd  MixmodCluster-class.Rd  MixmodClustering-class.Rd  MixmodDAResults-class.Rd  MixmodLearn-class.Rd  MixmodPredict-class.Rd  MixmodResults-class.Rd  MixmodXmlCheck-class.Rd  MixmodXmlInput-class.Rd  Model-class.Rd  MultinomialModel-class.Rd  MultinomialParameter-class.Rd  Parameter-class.Rd  Rmixmod-package.Rd  Strategy-class.Rd  asQualitative.Rd  barplot-methods.Rd  barplotCluster.Rd  birds.Rd  car.Rd  clusteringMain.Rd  composeModelName.Rd  ellipse.Rd  extract-methods.Rd  finance.Rd  geyser.Rd  heterodata.Rd  heterodatatest.Rd  heterodatatrain.Rd  hist-methods.Rd  histCluster.Rd  initialize-methods.Rd  is.dataType.Rd  is.wholenumber.Rd  isQualitative.Rd  (+27 more)
src/: BinaryOutputHandling.cpp  BinaryOutputHandling.h  ClusteringInputHandling.cpp  ClusteringInputHandling.h  Conversion.cpp  (+24 more)
(+642 files in other folders)
